...
                                onDismiss()
                                nav.navigate("UserAddIngredient")
                            },
                            modifier = Modifier
                                .align(Alignment.CenterHorizontally)
                                .size(75.dp)
                                .testTag("addIngredientManually")
                        ) {
                            Icon(
                                Icons.Default.Search,
                                contentDescription = "Enter manually",
                                modifier = Modifier.size(75.dp)
                            )
...
