...
                        fontWeight = FontWeight.Bold
                    )

                    IconButton(onClick = {
                        showDialog = true

                    }, modifier = Modifier.testTag("ingredientSearchOptionButton")) {
                        Icon(
                            imageVector = Icons.Default.AddCircle,
                            contentDescription = "Add Icon",
                            tint = Color.White,
                            modifier = Modifier.size(30.dp)
                        )
...
